[gd_scene load_steps=23 format=3 uid="uid://c4fe8rix7vpn5"]

[ext_resource type="Script" uid="uid://csd4ncy3jgem8" path="res://world/world.gd" id="1_4papg"]
[ext_resource type="PackedScene" uid="uid://byli3ck6gpqtc" path="res://actors/pawns/player/player.tscn" id="1_fyhu2"]
[ext_resource type="Resource" uid="uid://d4jf4712x0u2o" path="res://world/resources/worlds/forest.tres" id="2_dqqhb"]
[ext_resource type="PackedScene" uid="uid://b3kkj3vijsw7s" path="res://ui/ui.tscn" id="5_dqqhb"]
[ext_resource type="PackedScene" uid="uid://c08inc3nvav0f" path="res://ui/pause_menu.tscn" id="6_b2suy"]
[ext_resource type="TileSet" uid="uid://31avaoegt2bk" path="res://world/tilesets/ground.tres" id="8_fyhu2"]
[ext_resource type="TileSet" uid="uid://dbtkbyo4n77qy" path="res://world/tilesets/walls.tres" id="9_ov2xu"]
[ext_resource type="TileSet" uid="uid://tradm20dt1wg" path="res://world/tilesets/defenses.tres" id="10_h8lre"]
[ext_resource type="TileSet" uid="uid://kp24hb4w12of" path="res://world/tilesets/interactables.tres" id="10_mad0u"]
[ext_resource type="TileSet" uid="uid://dal5shiydc68s" path="res://world/tilesets/resources.tres" id="10_ocfjn"]
[ext_resource type="PackedScene" uid="uid://dnpygi6xo1s0n" path="res://actors/nexus/nexus.tscn" id="11_ov2xu"]
[ext_resource type="Script" uid="uid://bhr5uamvonway" path="res://actors/pawns/generic/debug_path.gd" id="13_ocfjn"]
[ext_resource type="Script" uid="uid://b2l0f2hsw0cbx" path="res://game/game_state.gd" id="14_b2suy"]
[ext_resource type="Resource" uid="uid://bfp85p8ebqdan" path="res://actors/pawns/enemies/resources/basic_zombie.tres" id="14_h8lre"]
[ext_resource type="Script" uid="uid://bptrhmi4tcomm" path="res://ai/state_machine.gd" id="15_h8lre"]
[ext_resource type="Script" uid="uid://omtnlx3h5d70" path="res://game/states/state_intermission.gd" id="16_ysn08"]
[ext_resource type="Script" uid="uid://djv6321i8c28e" path="res://game/states/state_wave.gd" id="17_m0cxt"]
[ext_resource type="Script" uid="uid://dqct7nbqcgvbh" path="res://game/spawn_manager.gd" id="19_p2iis"]
[ext_resource type="Resource" uid="uid://b6msgfm6ns6rx" path="res://world/resources/pawns/forest_enemies.tres" id="20_aysyn"]
[ext_resource type="Script" uid="uid://ocod1qfphspl" path="res://actors/pawns/player/game_over.gd" id="21_aysyn"]
[ext_resource type="Script" uid="uid://bgbi7qv8f0ml3" path="res://upgrades/upgrade_manager.gd" id="21_o1net"]
[ext_resource type="Script" uid="uid://bjc7dxmakq7ml" path="res://game/defense_manager.gd" id="22_3ljsx"]

[node name="World" type="Node2D" node_paths=PackedStringArray("tiles_root", "ground_tiles", "wall_tiles", "interactable_tiles", "resource_tiles", "defense_tiles", "nexus", "debug_path") groups=["world"]]
script = ExtResource("1_4papg")
world_config = ExtResource("2_dqqhb")
tiles_root = NodePath("Tiles")
ground_tiles = NodePath("Tiles/GroundTiles")
wall_tiles = NodePath("Tiles/WallTiles")
interactable_tiles = NodePath("Tiles/InteractableTiles")
resource_tiles = NodePath("Tiles/ResourceTiles")
defense_tiles = NodePath("Tiles/DefenseTiles")
nexus = NodePath("Nexus")
debug_path = NodePath("DebugPath")

[node name="Player" parent="." instance=ExtResource("1_fyhu2")]

[node name="UI" parent="." node_paths=PackedStringArray("world", "player", "game_state", "game_over", "nexus") instance=ExtResource("5_dqqhb")]
world = NodePath("..")
player = NodePath("../Player")
game_state = NodePath("../GameState")
game_over = NodePath("../GameOver")
nexus = NodePath("../Nexus")

[node name="PauseMenu" parent="." instance=ExtResource("6_b2suy")]

[node name="CanvasModulate" type="CanvasModulate" parent="."]
visible = false
position = Vector2(-1, 0)
color = Color(0.5, 0.5, 0.5, 1)

[node name="Tiles" type="Node2D" parent="."]
scale = Vector2(4, 4)

[node name="GroundTiles" type="TileMapLayer" parent="Tiles"]
z_index = -1
tile_set = ExtResource("8_fyhu2")
collision_enabled = false

[node name="WallTiles" type="TileMapLayer" parent="Tiles"]
z_index = -1
tile_set = ExtResource("9_ov2xu")

[node name="InteractableTiles" type="TileMapLayer" parent="Tiles"]
tile_set = ExtResource("10_mad0u")

[node name="ResourceTiles" type="TileMapLayer" parent="Tiles"]
tile_set = ExtResource("10_ocfjn")

[node name="DefenseTiles" type="TileMapLayer" parent="Tiles"]
tile_set = ExtResource("10_h8lre")

[node name="Nexus" parent="." groups=["nexus"] instance=ExtResource("11_ov2xu")]

[node name="Zombies" type="Node2D" parent="."]

[node name="DebugPath" type="Node2D" parent="."]
script = ExtResource("13_ocfjn")
metadata/_custom_type_script = "uid://bhr5uamvonway"

[node name="Roots" type="Node2D" parent="."]
position = Vector2(2, 0)

[node name="ZombieRoot" type="Node2D" parent="Roots"]
position = Vector2(0, -2)

[node name="GameState" type="Node2D" parent="." node_paths=PackedStringArray("upgrade_manager", "defense_manager", "state_machine", "intermission_state", "wave_state", "spawn_manager")]
script = ExtResource("14_b2suy")
upgrade_manager = NodePath("UpgradeManager")
defense_manager = NodePath("DefenseManager")
state_machine = NodePath("StateMachine")
intermission_state = NodePath("StateMachine/Intermission")
wave_state = NodePath("StateMachine/Wave")
spawn_manager = NodePath("SpawnManager")
metadata/_custom_type_script = "uid://b2l0f2hsw0cbx"

[node name="StateMachine" type="Node2D" parent="GameState" node_paths=PackedStringArray("initial_state")]
script = ExtResource("15_h8lre")
initial_state = NodePath("Intermission")
metadata/_custom_type_script = "uid://bptrhmi4tcomm"

[node name="Intermission" type="Node2D" parent="GameState/StateMachine" node_paths=PackedStringArray("game_state", "spawn_manager", "nexus", "world")]
script = ExtResource("16_ysn08")
game_state = NodePath("../..")
spawn_manager = NodePath("../../SpawnManager")
nexus = NodePath("../../../Nexus")
world = NodePath("../../..")
intermission_time = 1.0

[node name="Wave" type="Node2D" parent="GameState/StateMachine" node_paths=PackedStringArray("game_state", "enemy_root", "spawn_manager", "world")]
script = ExtResource("17_m0cxt")
game_state = NodePath("../..")
enemy_root = NodePath("../../../Zombies")
enemy_data = ExtResource("14_h8lre")
spawn_manager = NodePath("../../SpawnManager")
wave_time = 30.0
world = NodePath("../../..")

[node name="SpawnManager" type="Node2D" parent="GameState" node_paths=PackedStringArray("world", "enemy_root")]
script = ExtResource("19_p2iis")
world = NodePath("../..")
world_enemies = ExtResource("20_aysyn")
enemy_root = NodePath("../../Roots/ZombieRoot")

[node name="UpgradeManager" type="Node2D" parent="GameState" node_paths=PackedStringArray("player")]
script = ExtResource("21_o1net")
player = NodePath("../../Player")
metadata/_custom_type_script = "uid://bgbi7qv8f0ml3"

[node name="DefenseManager" type="Node2D" parent="GameState"]
script = ExtResource("22_3ljsx")
metadata/_custom_type_script = "uid://bjc7dxmakq7ml"

[node name="GameOver" type="Node2D" parent="." node_paths=PackedStringArray("player", "nexus")]
script = ExtResource("21_aysyn")
player = NodePath("../Player")
nexus = NodePath("../Nexus")
metadata/_custom_type_script = "uid://ocod1qfphspl"
